--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "vue-persian-datetime-picker": "^2.7.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
