--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
+    "ckeditor4-vue": "^1.3.1",
     "nuxt": "^2.14.0",
     "vue-persian-datetime-picker": "^2.7.0"
   },
