--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@nuxtjs/axios": "^5.12.5",
     "ckeditor4-vue": "^1.3.1",
     "nuxt": "^2.14.0",
-    "vue-persian-datetime-picker": "^2.7.0"
+    "vue-persian-datetime-picker": "^2.7.0",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
