--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ckeditor4-vue": "^1.3.1",
     "nuxt": "^2.14.0",
     "vue-persian-datetime-picker": "^2.7.0",
-    "vuelidate": "^0.7.6"
+    "vuelidate": "^0.7.6",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
