--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/axios": "^5.12.5",
     "ckeditor4-vue": "^1.3.1",
     "nuxt": "^2.14.0",
+    "v-select2-component": "^0.4.7",
     "vue-persian-datetime-picker": "^2.7.0",
     "vuelidate": "^0.7.6",
     "vuex": "^3.6.2"
