--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
     "ckeditor4-vue": "^1.3.1",
+    "notiflix": "^3.0.1",
     "nuxt": "^2.14.0",
     "vue-persian-datetime-picker": "^2.7.0",
     "vue-select": "^3.12.2",
